# sweetrpg-data-model

./: .buildinfo  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  Package.swift  README.md  all.html  api.html  db.html  genindex.html  index.html  models.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  sidebar-items.js
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: debug.yml  python-ci.yml  python-pr.yml  python-update-reqs.yml  rust-ci.yml  rust-pr.yml  rust-update-reqs.yml
Tests/kvObjectsTests/: kvObjectsTests.swift
_modules/: index.html
_sources/: db.rst.txt  index.rst.txt
constants/: index.html
constants/constants/: constant.EVENT_EXPRESSION_CHANGED.html  constant.EVENT_PING.html  constant.EVENT_RECALCULATE.html  constant.EVENT_VALUE_CHANGED.html  constant.KEY_ENCODING_BASE64.html  constant.KEY_ENCODING_PLAIN.html  constant.KEY_TYPE_BOOLEAN.html  constant.KEY_TYPE_DATA.html  constant.KEY_TYPE_INTEGER.html  constant.KEY_TYPE_STRING.html  constant.RESPONSE_ERROR.html  constant.RESPONSE_IGNORED.html  constant.RESPONSE_PONG.html  constant.RESPONSE_SUCCESS.html  index.html  sidebar-items.js  static.EVENT_EXPRESSION_CHANGED.html  static.EVENT_PING.html  static.EVENT_RECALCULATE.html  static.EVENT_VALUE_CHANGED.html  static.KEY_ENCODING_BASE64.html  (+9 more)
docs/: api.rst  conf.py  models.rst
events/: index.html  sidebar-items.js
models/: index.html
requirements/: dev.in  dev.txt  docs.txt  pkg.txt  tests.in  tests.txt
scripts/: update-requirements.sh
src/: events.rs  lib.rs  vo.rs
src/constants/: mod.rs  (+1 more)
tests/: __init__.py  test_expression_event.py  test_expression_event_model.py  test_key_db_schema.py  test_key_document.py  test_key_event.py  test_key_event_model.py  test_key_model.py  test_packages.py  test_snapshot_db_schema.py  test_snapshot_document.py  test_snapshot_model.py  test_store_db_schema.py  test_store_document.py  test_store_model.py  test_value_db_schema.py  test_value_document.py  test_value_event.py  test_value_event_model.py  test_value_model.py
vo/: index.html  sidebar-items.js
(+62 files in other folders)
