[package]
name = "sweetrpg-kv-objects"
description = "Objects for the SweetRPG Key-value Store."
homepage = "https://sweetrpg-kv-objects.github.com/"
authors = ["Paul Schifferer <paul@schifferers.net>"]
documentation = "https://sweetrpg-kv-objects.github.com/"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/sweetrpg/kv-objects/"
version = "0.0.1"
rust-version = "1.72.1"
edition = "2021"

exclude = [
    ".github/*",
    "scripts/*",
    "coverage.svg",
    ".editorconfig",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
mongodb = "2.7.0"
serde = "1.0.189"
