[package]
name = "sweetrpg-kv-objects"
description = "Objects for Key-value store"
version = "0.0.55"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/sweetrpg/kv-objects.rs"
homepage = "https://github.com/sweetrpg/kv-objects"
keywords = ["sweetrpg", "key-value", "objects"]
categories = ["data-structures"]
authors = ["Paul Schifferer <paul@schifferers.net>"]
exclude = [
    "*.orig",
    ".github/*",
    ".gitignore",
    ".rust-version",
    ".editorconfig",
    ".cargo_vcs_info.json",
]

[dependencies]
sweetrpg-model-core = "~0"
serde = { version = "~1", features = ["derive"] }
serde_json = "1"
